--- a/app/views/application_partials/_header.html.erb
+++ b/app/views/application_partials/_header.html.erb
@@ -92,7 +92,7 @@
                       </li>
                       <li>
                           <a href="index.html#">
-                              <span class="photo"><img alt="avatar" src="assets/img/ui-zac.jpg"></span>
+                              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-zac.jpg"></span> %>
                               <span class="subject">
                               <span class="from">Zac Snider</span>
                               <span class="time">Just now</span>
@@ -104,7 +104,7 @@
                       </li>
                       <li>
                           <a href="index.html#">
-                              <span class="photo"><img alt="avatar" src="assets/img/ui-divya.jpg"></span>
+                              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-divya.jpg"></span> %>
                               <span class="subject">
                               <span class="from">Divya Manian</span>
                               <span class="time">40 mins.</span>
@@ -116,7 +116,7 @@
                       </li>
                       <li>
                           <a href="index.html#">
-                              <span class="photo"><img alt="avatar" src="assets/img/ui-danro.jpg"></span>
+                              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-danro.jpg"></span> %>
                               <span class="subject">
                               <span class="from">Dan Rogers</span>
                               <span class="time">2 hrs.</span>
@@ -128,7 +128,7 @@
                       </li>
                       <li>
                           <a href="index.html#">
-                              <span class="photo"><img alt="avatar" src="assets/img/ui-sherman.jpg"></span>
+                              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-sherman.jpg"></span> %>
                               <span class="subject">
                               <span class="from">Dj Sherman</span>
                               <span class="time">4 hrs.</span>
