--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -18,16 +18,20 @@ $(e.target).removeData('bs.modal');
 $('.modal').remove();
 });
 
-$('#dogs-custom-table').DataTable();
-$('#dogs-training-table').DataTable();
-$('#dogs-transfer-table').DataTable();
-$('#clients-custom-table').DataTable();
-$('#clients-transfer-table').DataTable();
-$('#clients-visit-table').DataTable();
-$('#volunteers-custom-table').DataTable();
-$('#volunteers-training-table').DataTable();
-$('#volunteers-transfer-table').DataTable();
-$('#volunteers-visit-table').DataTable();
+
+var tableSelect = [5, 10, 25];
+
+
+$('#dogs-custom-table').DataTable({ "lengthMenu": tableSelect });
+$('#dogs-training-table').DataTable({ "lengthMenu": tableSelect });
+$('#dogs-transfer-table').DataTable({ "lengthMenu": tableSelect });
+$('#clients-custom-table').DataTable({ "lengthMenu": tableSelect });
+$('#clients-transfer-table').DataTable({ "lengthMenu": tableSelect });
+$('#clients-visit-table').DataTable({ "lengthMenu": tableSelect });
+$('#volunteers-custom-table').DataTable({ "lengthMenu": tableSelect });
+$('#volunteers-training-table').DataTable({ "lengthMenu": tableSelect });
+$('#volunteers-transfer-table').DataTable({ "lengthMenu": tableSelect });
+$('#volunteers-visit-table').DataTable({ "lengthMenu": tableSelect });
 
 <% if @sender %>
   let fullname;
