--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -3,55 +3,105 @@ $('body').append('<%= j render("edit_form") %>');
 $('#custom-event, #training, #transfer, #visit').css("display", "inherit");
 
 $(document).on('change', '#training-other-checkbox', function() {
-if( $('#training-other-checkbox').not(':checked')) {
-$('#event_training_attributes_other').html('');
-}
+  if( $('#training-other-checkbox').not(':checked')) {
+    $('#event_training_attributes_other').html('');
+  }
 });
 
 
 $('#editEvent').modal('show');
 $(".closeEditEvent").on("click", function() {
-$("#editEvent").modal('hide');
+  $("#editEvent").modal('hide');
 });
 $('body').on('hidden.bs.modal', '.modal', function (e) {
-$(e.target).removeData('bs.modal');
-$('.modal').remove();
+  $(e.target).removeData('bs.modal');
+  $('.modal').remove();
 });
+
+
+
+$.fn.dataTable.ext.order['dom-checkbox'] = function  ( settings, col )
+{
+  return this.api().column( col, {order:'index'} ).nodes().map( function ( td, i ) {
+    return $('input', td).prop('checked') ? '1' : '0';
+  } );
+}
+
 
 
 var tableSelect = [5, 10, 25];
 
 
-$('#dogs-custom-table').DataTable({ "lengthMenu": tableSelect });
-$('#dogs-training-table').DataTable({ "lengthMenu": tableSelect });
-$('#dogs-transfer-table').DataTable({ "lengthMenu": tableSelect });
-$('#clients-custom-table').DataTable({ "lengthMenu": tableSelect });
-$('#clients-transfer-table').DataTable({ "lengthMenu": tableSelect });
-$('#clients-visit-table').DataTable({ "lengthMenu": tableSelect });
-$('#volunteers-custom-table').DataTable({ "lengthMenu": tableSelect });
-$('#volunteers-training-table').DataTable({ "lengthMenu": tableSelect });
-$('#volunteers-transfer-table').DataTable({ "lengthMenu": tableSelect });
-$('#volunteers-visit-table').DataTable({ "lengthMenu": tableSelect });
+$('#dogs-custom-table').DataTable({ 
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#dogs-training-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#dogs-transfer-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#clients-custom-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#clients-transfer-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#clients-visit-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#volunteers-custom-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#volunteers-training-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#volunteers-transfer-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
+$('#volunteers-visit-table').DataTable({
+  "columnDefs": [
+    { "orderDataType": "dom-checkbox", targets: 0 }
+  ],
+  "lengthMenu": tableSelect });
 
-<% if @sender %>
-  let fullname;
-  let email;
-  let phone;
-  let address;
-  let radio;
-  let sender;
+  <% if @sender %>
+    let fullname;
+let email;
+let phone;
+let address;
+let radio;
+let sender;
 
-  radio = $('#sender-radio').empty();
-  fullname = $('#sender-fullname').empty();
-  email = $('#sender-email').empty();
-  phone = $('#sender-phone').empty();
-  address = $('#sender-address').empty();
-  sender = $('#sender_id');
+radio = $('#sender-radio').empty();
+fullname = $('#sender-fullname').empty();
+email = $('#sender-email').empty();
+phone = $('#sender-phone').empty();
+address = $('#sender-address').empty();
+sender = $('#sender_id');
 
-  radio.html("<input type='radio' checked disabled>");
-  fullname.html(" <%= @sender.fullname %> ");
-  email.html(" <%= @sender.email %> ");
-  phone.html(" <%= @sender.phone1 %> ");
-  address.html(" <%= @sender.location.full_street_address %> ");
-  sender.val(" <%= @sender.id %> ");
+radio.html("<input type='radio' checked disabled>");
+fullname.html(" <%= @sender.fullname %> ");
+email.html(" <%= @sender.email %> ");
+phone.html(" <%= @sender.phone1 %> ");
+address.html(" <%= @sender.location.full_street_address %> ");
+sender.val(" <%= @sender.id %> ");
 <% end %> 
