--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <section id="main-content">
         <section class="wrapper site-min-height">
 
-              <%= yield %>
+          <%= yield %>
 
         </section>
       </section>
@@ -46,8 +46,11 @@
 
 
     <script>
-      <%# //custom select box %>
-      <%# $(function(){ $('select.styled').customSelect(); }); %>
+$(document).on("turbolinks:load", function() {
+  if ($(".dataTables_wrapper").length == 0) {
+    $("table").DataTable();
+  }
+});
     </script>
 
   </body>
