--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -31,6 +31,8 @@
 <br>
 
 <%= link_to 'New Dog', new_client_path %>
+<br>
+<%= link_to 'Import data in CSV format', new_dog_import_path %> 
 <script>
 $(document).on("turbolinks:load", function(){
   $("body").on("click", "#showOwnerBtn", function(){
