--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -34,5 +34,7 @@
 <%= link_to 'New Client', new_client_path %>
 <br>
 <%= link_to 'Download data in CSV format', clients_path(format: "csv") %> 
+<br>
+<%= link_to 'Import data in CSV format', new_dogs_owners_import_path %> 
 
 
