--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -34,7 +34,7 @@
 <br>
 <%= link_to 'Download data in CSV format', dogs_path(format: "csv") %> 
 <br>
-<%= link_to 'Import data in CSV format', new_dog_import_path %> 
+<%= link_to 'Import data in CSV format', new_dogs_import_path %> 
 
 <script>
 $(document).on("turbolinks:load", function(){
