--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -33,5 +33,7 @@
 <%= link_to 'New Donation', new_business_donation_path %>
 <br>
 <%= link_to 'Download data in CSV format', business_donations_path(format: "csv") %> 
+<br>
+<%= link_to 'Import data in CSV format', new_business_donations_import_path %> 
 
-
+ 
