--- a/app/views/volunteers_imports/new.html.erb
+++ b/app/views/volunteers_imports/new.html.erb
@@ -1,10 +1,21 @@
-<h1>Volunteers Import</h1>
+<div class="imports-panel">
 
-<%= render "application_partials/import_info", klass: 'VolunteersImport' %>
+  <div class="col-md-12">
+    <div class="white-panel pn">
+      <div class="white-header">
+        <h1>Volunteers Import</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <%= render "application_partials/import_info", klass: 'VolunteersImport' %>
+          <%= form_for @volunteers_import do |f| %>
+            <%= render "application_partials/imports_flashes", import_objects: @volunteers_import %>
+            <div class="field"> <%= f.file_field :file %> </div>
+            <div class="buttons"><%= f.submit "Import" %></div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<%= form_for @volunteers_import do |f| %>
-  <%= render "application_partials/imports_flashes", import_objects: @volunteers_import %>
-  <div class="field"> <%= f.file_field :file %> </div>
-  <div class="buttons"><%= f.submit "Import" %></div>
-<% end %>
-
+</div>
