--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BT - Dashboard</title>
     <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
-    <%# <%= favicon_link_tag 'favicon.png' %1> %> 
+    <%= favicon_link_tag 'favicon.png' %> 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
