--- a/app/views/volunteer_mailer/welcome_mail.html.erb
+++ b/app/views/volunteer_mailer/welcome_mail.html.erb
@@ -1,5 +1,3 @@
-<h1>VolunteerMailer#welcome_mail</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/volunteer_mailer/welcome_mail.html.erb
-</p>
+<h1>Welcome mail subject: <%= @email_template.subject %> </h1>
+<h2> Welcome user: <%= @volunteer.fullname %> </h2>
+<p> Body: <%= @email_template.body %> </p>
