--- a/app/views/volunteer_mailer/welcome_mail.text.erb
+++ b/app/views/volunteer_mailer/welcome_mail.text.erb
@@ -1,3 +1,3 @@
-VolunteerMailer#welcome_mail
-
-<%= @greeting %>, find me in app/views/volunteer_mailer/welcome_mail.text.erb
+Welcome mail subject: <%= @email_template.subject %>
+Welcome user: <%= @volunteer.fullname %> 
+Body: <%= @email_template.body %> 
