--- a/app/views/stats/_accounts_stats.html.erb
+++ b/app/views/stats/_accounts_stats.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-12">
     <div class="volunteers-groups-stats-wrapper">
       <h4> <%= name %> Summary</h4>
-      <table class="table table-striped table-hover">
+      <table class="table-striped table-hover">
         <% if accounts.count > 0%>
             <% running_total = 0 %>
             <% accounts.each do |account| %>
