--- a/app/views/stats/donations.html.erb
+++ b/app/views/stats/donations.html.erb
@@ -41,7 +41,7 @@
         <div class="col-md-12">
           <div class="volunteers-groups-stats-wrapper">
             <h4>Highest Donations</h4>
-            <table class="table table-striped table-hover">
+            <table class="table-striped table-hover">
                 <tr>
                   <th>No.</th>
                   <th>Donator name</th>
