--- a/app/views/stats/volunteers.html.erb
+++ b/app/views/stats/volunteers.html.erb
@@ -45,17 +45,21 @@
         <div class="col-md-12">
           <div class="volunteers-groups-stats-wrapper">
             <h4>Groups Summary</h4>
-            <table class="table table-striped table-hover">
+            <table class="table-striped table-hover">
+              <thead>
                 <tr>
                   <th>Group name</th>
                   <th>Participants</th>
                 </tr>
+              </thead>
+              <tbody>
                 <% volunteers_groups_stats.each do |name, number| %> 
                   <tr>
                     <td> <%= name %> </td>
                     <td> <%= number %> </td>
                   </tr>
                 <% end %> 
+              </tbody>
             </table>
           </div>
         </div>
