--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -7,7 +7,7 @@
     <title>BT-Login</title>
     <%= favicon_link_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'application', 'https//fonts.googleapis.com/css?family=Ruda:400,700,900//fonts.googleapis.com/css?family=Ruda:400,700,900' %> 
+    <%# <%= stylesheet_link_tag 'application', 'https//fonts.googleapis.com/css?family=Ruda:400,700,900//fonts.googleapis.com/css?family=Ruda:400,700,900' %1> %> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
