--- a/app/views/layouts/stats_layout.html.erb
+++ b/app/views/layouts/stats_layout.html.erb
@@ -7,7 +7,7 @@
     <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
     <%= favicon_link_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'application', 'https//fonts.googleapis.com/css?family=Ruda:400,700,900//fonts.googleapis.com/css?family=Ruda:400,700,900' %> 
+    <%# <%= stylesheet_link_tag 'application', 'https//fonts.googleapis.com/css?family=Ruda:400,700,900//fonts.googleapis.com/css?family=Ruda:400,700,900' %1> %> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
